--- a/style.css
+++ b/style.css
@@ -1,102 +1,82 @@
 @import url("https://fonts.googleapis.com/css2?family=Onest:wght@200&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Onest:wght@200&family=Oxygen&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Oxygen&display=swap");
 
 * {
   padding: 0;
   margin: 0;
+  box-sizing: border-box;
 }
 
 html {
-  background-image: url(./Imagens/fundo.png);
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-color: black;
+  background: url(./Imagens/fundo.png) center/cover no-repeat black;
 }
 
 body {
   height: 100vh;
   width: 100vw;
   overflow-x: hidden;
+  font-family: "Onest", sans-serif;
 }
 
-.menu {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  z-index: 1000;
-}
-
-div#divMenu {
-  position: fixed;
-  background-color: rgba(0, 0, 0, 0.503);
+#divMenu {
+  position: relative;
+  background-color: rgba(0, 0, 0, 0.5);
   display: flex;
   justify-content: space-evenly;
-  padding-top: 15px;
-  padding-bottom: 15px;
+  align-items: center;
+  padding: 15px 0;
 }
 
-div#divMenu p {
+#divMenu p {
   font-size: 20px;
   color: white;
 }
 
-div#divMenu a {
+#divMenu a {
   text-decoration: none;
 }
 
-div#backgroundBlur {
-  display: flex;
+#backgroundBlur {
   position: absolute;
   width: 50vw;
-  height: 100vh;
+  height: 1500px;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  background-color: rgba(0, 0, 0, 0.095);
+  background-color: rgba(0, 0, 0, 0.2);
   backdrop-filter: blur(8px);
   z-index: -1;
 }
 
-div#perfilArthur {
-  display: flexbox;
+#perfilArthur {
   text-align: center;
+  padding: 20px 0;
 }
 
-div#perfilArthur img {
-  padding-top: 20px;
+#perfilArthur img {
   width: 315px;
-  border-radius: 250px;
+  border-radius: 500px;
 }
 
-div#perfilArthur h1 {
+#perfilArthur h1 {
+  margin: 25px 0 35px 0;
   color: white;
-  font-family: Arial, Helvetica, sans-serif;
-  display: flex;
-  justify-content: center;
-  padding-bottom: 20px;
-  padding-top: 20px;
   font-family: "Oxygen", sans-serif;
   font-size: 35px;
 }
 
-div#perfilArthur p {
-  padding-top: 20px;
+#perfilArthur p {
+  margin: 5px 0;
   color: white;
-  font-family: "Onest", sans-serif;
-  display: flex;
-  justify-content: center;
   font-size: 20px;
 }
 
-div#ancoragens {
-  padding: 60px;
-  display: flexbox;
+#ancoragens {
+  padding: 60px 0;
   text-align: center;
 }
 
-div#ancoragens a {
+#ancoragens a {
   font-family: "Onest", sans-serif;
   color: white;
   text-decoration: none;
@@ -104,75 +84,91 @@ div#ancoragens a {
   margin: 0 10px;
 }
 
-/* Seção de Projetos */
-section#projetos {
-  padding-top: 100px;
-  background-color: rgba(255, 255, 255, 0);
+#projetos {
+  padding: 100px 0;
+  background: transparent;
   display: flex;
   justify-content: center;
-  text-align: center;
-  width: 635px;
-  position: absolute;
-  left: 25%;
+  align-items: center;
+  position: relative;
 }
 
-div#divProjetos h1#proj {
-  padding-bottom: 40px;
-  padding-top: 120px;
+#divProjetos h1#proj {
+  padding: 120px 0 40px 0;
   font-family: "Oxygen", sans-serif;
   font-size: 35px;
-  color: rgb(255, 255, 255);
-  text-align: center;
+  color: white;
 }
 
-div#divProjetos h1 {
-  padding-top: 35px;
+#divProjetos h1 {
+  padding: 35px 0;
   font-family: "Onest", sans-serif;
   font-size: 35px;
-  color: rgb(255, 255, 255);
-  text-align: left;
+  color: white;
+  text-align: center;
 }
 
-div#divProjetos img {
-  width: 800px;
+#divProjetos img {
+  display: block;
+  width: 50%;
+  margin: 0 auto;
 }
 
-div#divProjetos p {
+#divProjetos p {
   font-family: "Onest", sans-serif;
   font-size: 18px;
-  color: rgb(255, 255, 255);
+  color: white;
+  width: 50%;
+  margin: 0 auto;
   text-align: center;
 }
 
-div h1#sobreMim {
-  padding-top: 70px;
-  padding-bottom: 25px;
+#sobreMim {
+  display: flex;
+  justify-content: center;
+}
+
+#sobreMim h1#sobreMim {
+  padding: 70px 0 25px 0;
   text-align: center;
 }
 
-section#sobreMim p {
+#sobreMim p {
   padding: 10px;
+  text-align: center;
+  width: 700px;
 }
 
-section#projetos hr#divisao {
-  margin-top: 70px;
+#cont {
+  text-align: center;
 }
 
-section#cont a {
+#cont a {
+  display: inline;
+  margin-right: 10px;
   text-decoration: none;
   color: white;
   font-family: "Onest", sans-serif;
   font-size: 25px;
 }
-section#cont p {
-  text-decoration: none;
+
+#cont p {
   color: white;
   font-family: "Onest", sans-serif;
-  margin-top: 5px;
-  font-size: 20px;
+  padding: 25px 0 35px 0;
+}
+
+hr {
+  width: 960px;
+  margin: 0 auto;
+}
+
+.divisao {
+  margin-top: 80px;
 }
 
 footer {
-  margin-top: 15px;
-  color: rgba(255, 255, 255, 0.244);
+  color: white;
+  display: flex;
+  justify-content: center;
 }
